# kocoasift

./: .gitignore  CMakeLists.txt  README.md
include/: common.hpp  detect.hpp  frontend.hpp  parameters.hpp
src/: detect.cpp  frontend.cpp  parameters.cpp
test/: test_frontend.cpp  test_gaussian.cpp  test_main.cpp
